--- a/home.Rmd
+++ b/home.Rmd
@@ -16,7 +16,8 @@ knitr::include_graphics("www/OCS_juitsa-sdot.png")
 
 ### ¿Para qué?
 
-- Este sitio permite realizar análisis comparativos de distintos indicadores asociados a cohesión social en América Latina, como confianza interpersonal, valoración de la democracia, participación en protestas, entre otros. Para ello se utiliza la base de la encuesta **LAPOP** (Latin American Public Opinion Project), olas  2004, 2006, 2008, 2010, 2012 y 2014. 
+
+Este sitio permite realizar análisis comparativos de distintos indicadores asociados a cohesión social en América Latina, como confianza interpersonal, valoración de la democracia, participación en protestas, entre otros. Para ello se utiliza la base de la encuesta **LAPOP** (Latin American Public Opinion Project), olas  2004, 2006, 2008, 2010, 2012 y 2014. 
 
 ### Cómo funciona
 
@@ -40,5 +41,8 @@ Sugerencias y comentarios:
 
 
 
+```{r eval=FALSE, include=FALSE}
+rmarkdown::render(input = here::here("home.rmd"),encoding = "UTF-8")
+```
 
 
