fuera TOC y edición menor

--- a/home.Rmd
+++ b/home.Rmd
@@ -2,7 +2,7 @@
 output: 
   html_document: 
     toc: TRUE
-    toc_float: TRUE
+    toc_float: FALSE
     css: "juitsa-theme.css"
 bibliography: "www//zlibrary.bib"
 ---
@@ -15,10 +15,7 @@ knitr::include_graphics("www/OCS_juitsa-sdot.png")
 ## Indicadores Comparativos de Cohesión Social para América Latina
 </div>
 
-### ¿Para qué?
-
-
-Este sitio permite realizar análisis comparativos de distintos indicadores asociados a cohesión social en América Latina, como confianza interpersonal, valoración de la democracia, participación en protestas, entre otros. Para ello se utiliza la base de la encuesta **LAPOP** (Latin American Public Opinion Project), olas  2004, 2006, 2008, 2010, 2012 y 2014. 
+El Observatorio de Cohesión Social es un portal para realizar análisis comparativos de distintos indicadores asociados a cohesión social en América Latina, como confianza interpersonal, valoración de la democracia, participación en protestas, entre otros. Para ello se utiliza la base de la encuesta **LAPOP** (Latin American Public Opinion Project), olas  2004, 2006, 2008, 2010, 2012 y 2014. 
 
 ### Cómo funciona
 
