--- a/production/prod_country-lvl-vars.rmd
+++ b/production/prod_country-lvl-vars.rmd
@@ -3,8 +3,9 @@ title: "Untitled"
 author: ""
 date: "31-10-2020"
 output: html_document
+editor_options: 
+  chunk_output_type: console
 ---
-
 
 ```{r}
 # Descargar paquetes. 
@@ -19,7 +20,6 @@ pacman::p_load(tidyverse,sjlabelled,countrycode,haven,questionr,wbstats,zoo,sjPl
 
 ```
 
-
 ```{r}
 # Cambio de formato de bases de datos: de dta a RData
 
@@ -32,20 +32,65 @@ pacman::p_load(tidyverse,sjlabelled,countrycode,haven,questionr,wbstats,zoo,sjPl
 
 # Cargar base de datos ------------------------------------------------------------------------
 
-load(file = "../input/data/original/GrandMerge.RData") #  "datos"  Lapop: 2004 - 2014
-
-load(file="../input/data/original/LAPOP_2004-2008.RData") # datos0418
+load(file = "input/data/original/GrandMerge.RData") #  "datos"  Lapop: 2004 - 2014
+load(file="input/data/original/LAPOP_2004-2008.RData") # datos0418
 
 # save(datos,file = "input/data/original/4_LAPOP_2004_2018.RData")
 ```
 
 
-# Generar base de datos individual longitudinal. Recuperar la variable pr4 ausente. 
+Bases faltantes en grandmerge
+```{r}
+dta<- list.files(path = "input/data/original/lapop-faltantes/", pattern = ".dta")
 
-A continuacion se presenta el codigo para crear una base de datos con los valores promedio por pais y una base de datos a nivel individual con las varibales nacionales agregadas. La base de datos longitudinal LAPOP, no introduce una pregunta que no se realiza todos los años [pr4], por ello, y para aumentar la cantidad de datos disponibles, agregamos a esta base de datos longitudinal dichas variables desde un merge de las bases por año. 
+for (i in 1:length(dta)) {
+  name<-paste0("dat_", dta[i])
+  datas<- paste0(dta[i])
+  assign(name, read_stata(file =paste0("input/data/original/lapop-faltantes/",datas)))
+  print(name)
+}
+
+vars<- c("wave", "year","pais", "it1", "prot3", "aoj12", "b2","b3", "b4","b10a", "b12", "b20", "b20a","b21","b21a",
+         "n9","n11","n15","ros4", "ing4","eff1", "pn4", "exc7","pol1", "vb2", "pr4")
+
+data_argentina2016 <- dat_argentina2016.dta   %>% select_if(names(dat_argentina2016.dta) %in% vars) %>% mutate(wave=2016)        
+data_argentina2018 <- dat_argentina2018.dta   %>% select_if(names(dat_argentina2018.dta) %in% vars) %>% mutate(wave=2018)  
+data_bolivia2016   <- dat_bolivia2016.dta     %>% select_if(names(dat_bolivia2016.dta  ) %in% vars) %>% mutate(wave=2016)      
+data_bolivia2018   <- dat_bolivia2018.dta     %>% select_if(names(dat_bolivia2018.dta  ) %in% vars) %>% mutate(wave=2018)      
+data_brazil2016    <- dat_brazil2016.dta      %>% select_if(names(dat_brazil2016.dta   ) %in% vars) %>% mutate(wave=2016)     
+data_brazil2018    <- dat_brazil2018.dta      %>% select_if(names(dat_brazil2018.dta   ) %in% vars) %>% mutate(wave=2018) 
+data_canada2016    <- dat_canada2016.dta      %>% select_if(names(dat_canada2016.dta   ) %in% vars) %>% mutate(wave=2016)     
+data_canada2018    <- dat_canada2018.dta      %>% select_if(names(dat_canada2018.dta   ) %in% vars) %>% mutate(wave=2018) 
+data_chile2016     <- dat_chile2016.dta       %>% select_if(names(dat_chile2016.dta    ) %in% vars) %>% mutate(wave=2016)    
+data_chile2018     <- dat_chile2018.dta       %>% select_if(names(dat_chile2018.dta    ) %in% vars) %>% mutate(wave=2018)    
+data_colombia2016  <- dat_colombia2016.dta    %>% select_if(names(dat_colombia2016.dta ) %in% vars) %>% mutate(wave=2016)       
+data_costarica2016 <- dat_costarica2016.dta   %>% select_if(names(dat_costarica2016.dta) %in% vars) %>% mutate(wave=2016)         
+data_costarica2018 <- dat_costarica2018.dta   %>% select_if(names(dat_costarica2018.dta) %in% vars) %>% mutate(wave=2018)   
+data_ecuador2018   <- dat_ecuador2018.dta     %>% select_if(names(dat_ecuador2018.dta  ) %in% vars) %>% mutate(wave=2018)      
+data_guyana2016    <- dat_guyana2016.dta      %>% select_if(names(dat_guyana2016.dta   ) %in% vars) %>% mutate(wave=2016)     
+data_panama2016    <- dat_panama2016.dta      %>% select_if(names(dat_panama2016.dta   ) %in% vars) %>% mutate(wave=2016)     
+data_panama2018    <- dat_panama2018.dta      %>% select_if(names(dat_panama2018.dta   ) %in% vars) %>% mutate(wave=2018)     
+data_uruguay2016   <- dat_uruguay2016.dta     %>% select_if(names(dat_uruguay2016.dta  ) %in% vars) %>% mutate(wave=2016)      
+data_uruguay2018   <- dat_uruguay2018.dta     %>% select_if(names(dat_uruguay2018.dta  ) %in% vars) %>% mutate(wave=2018)      
+data_usa2016       <- dat_usa2016.dta         %>% select_if(names(dat_usa2016.dta      ) %in% vars) %>% mutate(wave=2016)  
+data_usa2018       <- dat_usa2018.dta         %>% select_if(names(dat_usa2018.dta      ) %in% vars) %>% mutate(wave=2018) 
+data_venezuela2016 <- dat_venezuela2016.dta   %>% select_if(names(dat_venezuela2016.dta) %in% vars) %>% mutate(wave=2016)        
+
+merge_faltante<- bind_rows(data_argentina2016,data_argentina2018,data_bolivia2016  ,data_bolivia2018  ,
+                        data_brazil2016   ,data_brazil2018   ,data_canada2016   ,data_canada2018   ,
+                        data_chile2016    ,data_chile2018    ,data_colombia2016 ,data_costarica2016,
+                        data_costarica2018,data_ecuador2018  ,data_guyana2016   ,data_panama2016   ,
+                        data_panama2018   ,data_uruguay2016  ,data_uruguay2018  ,data_usa2016      ,
+                        data_usa2018      ,data_venezuela2016)
+```
+
+# Generar base de datos individual longitudinal.
+
+**Recuperar la variable pr4 ausente.**
+
+A continuación se presenta el código para crear una base de datos con los valores promedio por país y una base de datos a nivel individual con las variables nacionales agregadas. La base de datos longitudinal LAPOP, no introduce una pregunta que no se realiza todos los años [pr4], por ello, y para aumentar la cantidad de datos disponibles, agregamos a esta base de datos longitudinal dichas variables desde un *merge* de las bases por año.
 
 ```{r}
-
 datos0418 <-  datos0418  %>%  
                         select(wave, year, pais, idnum, upm, 
                               strata, wt, weight1500, estratopri,
@@ -87,42 +132,63 @@ datosselc$wave <- ifelse(datosselc$year==2010, 2010, datosselc$wave)
 datosselc$wave <- ifelse(datosselc$year==2012, 2012, datosselc$wave)
 datosselc$wave <- ifelse(datosselc$year==2014, 2014, datosselc$wave)
 
-datosselc <- remove_all_labels (datosselc) # Las etiquetas no son compatibles
+datosselc <- remove_all_labels(datosselc) # Las etiquetas no son compatibles
 
-# Merge 2004-2014 + 2018 
-datos <- rbind(datosselc,datos1618) # logra una base longitudinal con la pr4 incluida. 
+# Merge 2004-2014 + 2018 +faltantes varias del grand merge
+datos <- bind_rows(datosselc,datos1618,merge_faltante) # logra una base longitudinal con la pr4 incluida. 
 datos <- copy_labels(datos, datos0418)
 
 names(datos)
 ```
 
-
-
 ```{r}
+#reverse coded
+datos$exc7  <- sjmisc::rec(datos$exc7,rec = "rev")
+datos$pn4   <- sjmisc::rec(datos$pn4,rec = "rev")
+datos$it1   <- sjmisc::rec(datos$it1,rec = "rev")
+datos$aoj12 <- sjmisc::rec(datos$aoj12,rec = "rev")
+datos$pol1  <- sjmisc::rec(datos$pol1 ,rec = "rev")
+```
 
-#save() #guardar base a nivel individual para periodo 2004 - 2018
-
-# Promedio pais | year ------------------------------------------------------------------------
+```{r a1}
+# Promedio pais | year ------------------------------------------------------------------------#
 datos2 <- datos %>% group_by(pais,wave)%>%summarise_all(funs(mean(., na.rm=TRUE))) 
 
-# Promedio wave para cada variable ------------------------------------------------------------
+# Promedio wave para cada variable ------------------------------------------------------------#
 
 ## promedio de variables para cada ola (p.e. el nivel de confianza interpersonal en año 2006)
 promedio_ola <- datos %>% group_by(wave)%>%summarise_all(funs(mean(., na.rm=TRUE))) 
 
 #promedios regionales
-promedio_ola <- select(promedio_ola, wave, year, it1, prot3, aoj12, b2, b3, b4, b10a, b12, b20,
-                       b20a, b21, b21a,n9, n11, n15, ros4, ing4, 
-                       eff1, pn4, exc7, pol1, vb2 , pr4) 
+promedio_ola <- promedio_ola %>% select(wave,it1:pr4) 
 
 # renombro varibles que incluyen promedio de ola
-colnames(promedio_ola) <- c("wave","year","it1_promr","prot3_promr","aoj12_promr","b2_promr","b3_promr",
-                            "b4_promr","b10a_promr","b12_promr","b20_promr","b20a_promr","b21_promr",
-                            "b21a_promr","n9_promr","n11_promr", "n15_promr", "ros4_promr",
-                            "ing4_promr", "eff1_promr", "pn4_promr", "exc7_promr","pol1_promr", "vb2_promr", "pr4_promr") 
+promedio_ola <- promedio_ola %>% rename("it1_promr"="it1",
+                                        "prot3_promr"="prot3",
+                                        "aoj12_promr"="aoj12",
+                                        "b2_promr"="b2",
+                                        "b3_promr"="b3",
+                                        "b4_promr"="b4",
+                                        "b10a_promr"="b10a",
+                                        "b12_promr"="b12",
+                                        "b20_promr"="b20",
+                                        "b20a_promr"="b20a",
+                                        "b21_promr"="b21",
+                                        "b21a_promr"="b21a",
+                                        "n9_promr"="n9",
+                                        "n11_promr"="n11",
+                                        "n15_promr"="n15",
+                                        "ros4_promr"="ros4",
+                                        "ing4_promr"="ing4",
+                                        "eff1_promr"="eff1",
+                                        "pn4_promr"="pn4",
+                                        "exc7_promr"="exc7",
+                                        "pol1_promr"="pol1",
+                                        "vb2_promr"="vb2",
+                                        "pr4_promr"="pr4")
 
 # unir en una base de datos
-lapop_country <- left_join(datos2, promedio_ola)
+lapop_country <- left_join(datos2, promedio_ola,by="wave")
 
 # ordenar los datos
 lapop_country <- arrange(lapop_country,
@@ -150,32 +216,24 @@ lapop_country <- arrange(lapop_country,
                          pol1, pol1_promr,
                          vb2, vb2_promr,
                          pr4, pr4_promr)
-
 ```
-
 
 ```{r}
 # crear variable country name como character y nombre en iso3c (p.e. United States = USA)
-lapop_country$pais.name <- as_label(lapop_country$pais)
-
-
+lapop_country$pais.name <- as_factor(lapop_country$pais)
 lapop_country$isocode   <- countrycode(lapop_country$pais.name, 
                                        origin = 'country.name', 
                                        destination = 'iso3c')
 lapop_country[,c("pais","pais.name","isocode")]
-
 ```
 
+# Variables a Nivel Macro
 
+## Country level variables
 
+### Gini Index (Gini)
 
-# Variables a Nivel Macro ---------------------------------------------------------------------####
-# country level variables -------------------------------------------------------------------------
-
-## Gini Index (Gini) -------------------------------------------------------------------------------
-
-
-```{r}
+```{r, cache=TRUE}
 paises<- unique(lapop_country$isocode)
 
 for (i in 1:length(paises)) {
@@ -192,12 +250,9 @@ gini<- gini %>% select(country,year=date,iso3c,gini=value)
 
 ```
 
+### Gross Domestic Product (GDP)
 
-
-
-## Gross Domestic Product (GDP) --------------------------------------------------------------------
-
-```{r}
+```{r, cache=TRUE}
 for (i in 1:length(paises)) {
   name<-paste0("gdp_", paises[i])
   pais<- paste0(paises[i])
@@ -215,74 +270,338 @@ gdp<- gdp %>%
 ```
 
 ```{r}
-# Merge datasets ------------------------------------------------------------------------------
+# Merge datasets
 country_vars <- full_join(x = gini,y = gdp)
 country_vars <- country_vars %>% arrange(country,year)
-
 ```
 
-
-
-# Country x wave ------------------------------------------------------------------------------
+**Country by wave**
 
 ```{r}
 table(lapop_country$pais.name,lapop_country$wave)
 ```
 
-
 ```{r}
 #Juntar Gini, GDP y Lapop
-
-
 lapop_country$idwc <- paste0(lapop_country$wave,lapop_country$isocode)
-country_vars$idwc <- paste0(country_vars$year, country_vars$iso3c)
-lapop_country3 <- left_join(lapop_country, country_vars,by="idwc")
+country_vars$idwc  <- paste0(country_vars$year, country_vars$iso3c)
 
+# Obtener promedio de year para cada indicador macro
+country_vars_means <- country_vars %>% 
+  select(year,gini,gdp) %>% 
+  group_by(year) %>% 
+  summarise_all(funs(mean(., na.rm=TRUE))) %>% 
+  rename("gini_agg"=gini,
+         "gdp_agg"=gdp)
+
+country_vars   <- left_join(x = country_vars,y = country_vars_means)
+country_vars   <- select(country_vars,-"year") #quitamos year de base macroeconomicos
+lapop_country3 <- left_join(lapop_country, country_vars,by="idwc")
 ```
 
-
-
-# Para rellenar los datos faltantes de los gini se recurrio a la base SWIID.
-
-```{r}
-
+```{r eval=FALSE, include=FALSE}
+# Para rellenar los datos faltantes de los gini se recurrio a la base SWIID
 load("../input/data/original/swiid8_3.rda")
+lapop_country3$idwc <- paste0(lapop_country3$wave,lapop_country3$pais.name) # Id para paises en años.
+swiid_summary$idwc  <- paste0(swiid_summary$year, swiid_summary$country) # Id para paises en años. 
+swiid_summary2      <- swiid_summary %>% select(idwc,gini_disp) # Se filtra la variable gini
 
-
-lapop_country3$idwc2 <- paste0(lapop_country3$wave,lapop_country3$pais.name) # Id para paises en años.
-swiid_summary$idwc2 <- paste0(swiid_summary$year, swiid_summary$country) # Id para paises en años. 
-swiid_summary2 <- swiid_summary %>% select(idwc2,gini_disp) # Se filtra la variable gini
-
-lapop_country4 <- left_join(lapop_country3, swiid_summary2, by="idwc2") # Se junta lapop con swiid
-
+lapop_country4        <- left_join(lapop_country3, swiid_summary2, by="idwc") # Se junta lapop con swiid
 lapop_country4$ginina <- as.logical(is.na(lapop_country4$gini)) # Se identifican los casos con na en gini
 
-basecor <- lapop_country4 %>% select(gini, gini_disp) %>% na.omit() # Se evalua si los valores son coherentes
+basecor <- lapop_country4 %>% 
+  select(gini, gini_disp) %>% 
+  na.omit() # Se evalua si los valores son coherentes
 cor(basecor$gini, basecor$gini_disp) # 0.80 los valores son relativamente distintos.
 
-lapop_country4$gini <- ifelse(lapop_country4$ginina == TRUE , lapop_country4$gini_disp,lapop_country4$gini) # Los NA de gini del databank son remplazados por los datos de Swiid. 
+lapop_country4$gini <- ifelse(lapop_country4$ginina == TRUE , 
+                              lapop_country4$gini_disp,
+                              lapop_country4$gini) # Los NA de gini del databank son remplazados por los datos de Swiid. 
 
 view_df(lapop_country4)
-lapop_country <- lapop_country4
-
-
+remove(list = c("lapop_country3","lapop_country4","swiid_summary2"))
 ```
 
-
-## Agregar variables promedio pais a la base individual. 
+## Ordenar Información de bases de datos
 
 ```{r}
-datos$idwc2 <- paste0(datos$wave, as_label(datos$pais))
-
-Lapop_2004_2008_indAgr <- merge(datos, lapop_country, by ="idwc2")
+lapop_country_2004to2018 <- lapop_country3 %>%
+  select(pais,pais.name,iso3c,wave,year,idwc,everything()) %>% 
+  select(-c("isocode","country")) %>% 
+  mutate(promedio="Promedio ola")
 ```
-
-
-
-## 5. Guardar base de datos
 
 ```{r}
-save(lapop_country, file ="../input/data/proc/lapop_country.RData")
-save(Lapop_2004_2008_indAgr, file ="../input/data/proc/Lapop_2004_2008_indAgr.RData")
+lapop_ind_2004to2018 <- datos %>% 
+  mutate("idwc"=paste0(datos$wave, as_factor(datos$pais)),
+         "pais.name"=as_factor(pais),
+         "iso3c"=countrycode(pais.name,origin = 'country.name',destination = 'iso3c')) %>%
+  select(pais,pais.name,iso3c,wave,year,idwc,everything())
 ```
 
+```{r}
+view_df(lapop_country_2004to2018)
+view_df(lapop_ind_2004to2018)
+```
+
+### Etiquetado de variables
+
+**Base nivel individual**
+
+```{r}
+names01<- c("b2", "b3", "b4", "b10a", "b12", "b20", "b20a", "b21", "b21a", "n9", "n11", "n15", "pr4")
+levels1 = c(1,2,3,4,5,6,7)
+labels1 = c("Nada","2","3","4","5","6","Mucho")
+
+for (i in names01) {
+  lapop_ind_2004to2018[,i]<- factor(unlist(lapop_ind_2004to2018[,i]),
+                          levels = levels1,
+                          labels = labels1)
+}
+
+#--------------------------------------------------------------------------------------------------
+names02 <- c("ros4","ing4","eff1")
+levels2 = c(1,2,3,4,5,6,7)
+labels2 = c("Muy en \n Desacuerdo","2","3","4","5","6","Muy de \n acuerdo")
+
+for (i in names02) {
+  lapop_ind_2004to2018[,i]<- factor(unlist(lapop_ind_2004to2018[,i]),
+                          levels = levels2,
+                          labels = labels2)
+}
+#--------------------------------------------------------------------------------------------------
+names03 <- c("aoj12","pol1")
+
+for (i in names03){
+  lapop_ind_2004to2018[,i]<- factor(unlist(lapop_ind_2004to2018[,i]),
+                          levels = c(1:4),
+                          labels = c("Nada","Poco","Algo","Mucho"))
+}
+
+#--------------------------------------------------------------------------------------------------
+lapop_ind_2004to2018$it1 <- factor(x = lapop_ind_2004to2018$it1,
+                                   levels = c(1:4),
+                                   labels = c("Nada \n confiable","Poco \n confiable",
+                                              "Algo \n confiable","Muy \n confiable"))
+
+
+# reverse coded
+lapop_ind_2004to2018$pn4 <- factor(x = lapop_ind_2004to2018$pn4,
+                                   levels = c(1:4),
+                                   labels = c("Muy \n insatisfecho","Insatisfecho","Satisfecho","Muy \n satisfecho"))
+#reverse coded
+lapop_ind_2004to2018$exc7 <- factor(x = lapop_ind_2004to2018$exc7,
+                                    levels = c(1:4),
+                                    labels = c("Nada \ngeneralizada","Poco \n generalizada", # NOTA: ya invertida
+                                               "Algo \n generalizada","Muy \n generalizada" ))
+
+lapop_ind_2004to2018$vb2   <- factor(x = lapop_ind_2004to2018$vb2 ,
+                                     levels = c(1,2),
+                                     labels = c("Sí votó","No votó"))
+
+lapop_ind_2004to2018$prot3 <- factor(x = lapop_ind_2004to2018$prot3 ,
+                                     levels = c(1,2),
+                                     labels = c("Sí","No"))
+
+
+#--------------------------------------------------------------------------------------------------
+levels_pais <- c(1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,21,22,23,24,25,26,40,41)
+labels_pais <- c("Mexico","Guatemala","El Salvador","Honduras","Nicaragua", "Costa Rica","Panama",
+                 "Colombia","Ecuador","Bolivia","Peru", "Paraguay","Chile","Uruguay","Brasil",
+                 "Venezuela","Argentina", "Republica Dominicana","Haiti","Jamaica","Guyana",
+                 "Trinidad y Tobago","Belice","Estados Unidos","Canada")
+
+lapop_ind_2004to2018$pais <- factor(lapop_ind_2004to2018$pais,
+                     levels = levels_pais, 
+                     labels = labels_pais)
+#--------------------------------------------------------------------------------------------------
+lapop_country_2004to2018$pais <- factor(lapop_country_2004to2018$pais,
+                     levels = levels_pais, 
+                     labels = labels_pais)
+
+# 2. Años/ola -----------------------------------------------------------------#
+
+# Nivel individual ----------------------------------------------------------#
+length(table(lapop_ind_2004to2018$year))
+table(lapop_ind_2004to2018$year)
+lapop_ind_2004to2018$year <- factor(lapop_ind_2004to2018$year,ordered = TRUE)
+class(lapop_ind_2004to2018$year)
+
+length(table(lapop_ind_2004to2018$wave))
+table(lapop_ind_2004to2018$wave)
+lapop_ind_2004to2018$wave <- factor(lapop_ind_2004to2018$wave,ordered = TRUE)
+class(lapop_ind_2004to2018$wave)
+
+# Nivel agregado --------------------------------------------------------#
+length(table(lapop_country_2004to2018$year))
+table(lapop_country_2004to2018$year)
+lapop_country_2004to2018$year <- factor(lapop_country_2004to2018$year,ordered = TRUE)
+class(lapop_country_2004to2018$year)
+
+length(table(lapop_country_2004to2018$wave))
+table(lapop_country_2004to2018$wave)
+lapop_country_2004to2018$wave <- factor(lapop_country_2004to2018$wave,ordered = TRUE)
+class(lapop_country_2004to2018$wave)
+```
+
+
+### Etiquetado de nombres de variable
+
+**Base a nivel individual**
+
+```{r}
+set_label(lapop_ind_2004to2018$year)<- "Año"
+set_label(lapop_ind_2004to2018$wave)<- "Ola"
+set_label(lapop_ind_2004to2018$pais)<- "País"
+set_label(lapop_ind_2004to2018$idwc)<- "País y año"
+set_label(lapop_ind_2004to2018$pais.name)<- "País (english)"
+set_label(lapop_ind_2004to2018$iso3c)<- "Pais (iso3 code)"
+set_label(lapop_ind_2004to2018$it1 )<- "Confianza Interpersonal"
+set_label(lapop_ind_2004to2018$prot3)<- "Participar en Protesta"
+set_label(lapop_ind_2004to2018$aoj12)<- "Confianza en Eficacia Sistema Judicial"
+set_label(lapop_ind_2004to2018$b2  )<- "Respeto por las Instituciones"
+set_label(lapop_ind_2004to2018$b3  )<- "Grado de Acuerdo: Derechos Básicos Están Protegidos por el Sistema  Político"
+set_label(lapop_ind_2004to2018$b4  )<- "Orgullo con el Sistema Político"
+set_label(lapop_ind_2004to2018$b10a)<- "Confianza en Sistema Judicial"
+set_label(lapop_ind_2004to2018$b12 )<- "Confianza en Fuerzas Armadas"
+set_label(lapop_ind_2004to2018$b20 )<- "Confianza en Iglesia Católica"
+set_label(lapop_ind_2004to2018$b20a)<- "Confianza en Iglesias Evangélicas/Protestantes"
+set_label(lapop_ind_2004to2018$b21 )<- "Confianza en Partidos Políticos"
+set_label(lapop_ind_2004to2018$b21a)<- "Confianza en Ejecutivo"
+set_label(lapop_ind_2004to2018$n9  )<- "Evaluación del Desempeño del Gobierno Combatiendo Corrupción"
+set_label(lapop_ind_2004to2018$n11 )<- "Evaluación del Desempeño del Gobierno en Seguridad Ciudadana"
+set_label(lapop_ind_2004to2018$n15 )<- "Evaluación del Desempeño del Gobierno Manejando Economía"
+set_label(lapop_ind_2004to2018$pr4 )<- "Respeto por la Propiedad Privada"
+set_label(lapop_ind_2004to2018$ros4)<- "Gobierno debe Implementar Políticas para Reducir Desigualdadad de Ingresos"
+set_label(lapop_ind_2004to2018$ing4)<- "Democracia es Mejor que otras Formas de Gobierno"
+set_label(lapop_ind_2004to2018$eff1)<- "Gobernantes están Interesados en lo que la Gente Piensa"
+set_label(lapop_ind_2004to2018$pn4 )<- "Satisfacción con la Democracia"
+set_label(lapop_ind_2004to2018$exc7)<- "Percepción de Corrupción Pública"
+set_label(lapop_ind_2004to2018$pol1)<- "Interés en Política"
+set_label(lapop_ind_2004to2018$vb2 )<- "Voto en Últimas Elecciones Presidenciales"
+```
+
+```{r}
+view_df(lapop_ind_2004to2018,show.id = TRUE, show.type = TRUE, encoding = "UTF-8", show.prc = TRUE)
+tab_xtab(lapop_ind_2004to2018$pais,lapop_ind_2004to2018$wave,file = "table_wave_country.html") # bien [10.nov.2020; 00:31]
+```
+
+**Base nivel agregado**
+
+```{r}
+#Corregir valores de variables binarias agregadas
+summary(lapop_country_2004to2018$prot3) # 1 = participa;   2 = no participa
+# lapop_country_2004to2018$prot3 <- (1-(lapop_country_2004to2018$prot3-1))# 0= no participa; 1= participa
+
+summary(lapop_country_2004to2018$vb2) # 1 = Voted;   2 = Did not voted
+# lapop_country_2004to2018$vb2   <- (1-(lapop_country_2004to2018$vb2-1)) # 0= % No votó ; 1= % Votó
+```
+
+```{r}
+set_label(lapop_country_2004to2018$year)<- "Año"
+set_label(lapop_country_2004to2018$wave)<- "Ola"
+set_label(lapop_country_2004to2018$pais)<- "País"
+set_label(lapop_country_2004to2018$idwc)<- "País y año"
+set_label(lapop_country_2004to2018$pais.name)<- "País (english)"
+set_label(lapop_country_2004to2018$iso3c)<- "País (iso3 code)"
+set_label(lapop_country_2004to2018$it1 )<- "Confianza Interpersonal"
+set_label(lapop_country_2004to2018$prot3)<- "Participar en Protesta (% Sí ha participado)"
+set_label(lapop_country_2004to2018$aoj12)<- "Confianza en Eficacia Sistema Judicial"
+set_label(lapop_country_2004to2018$b2  )<- "Respeto por las Instituciones"
+set_label(lapop_country_2004to2018$b3  )<- "Grado de Acuerdo: Derechos Básicos Están Protegidos por el Sistema  Político"
+set_label(lapop_country_2004to2018$b4  )<- "Orgullo con el Sistema Político"
+set_label(lapop_country_2004to2018$b10a)<- "Confianza en Sistema Judicial"
+set_label(lapop_country_2004to2018$b12 )<- "Confianza en Fuerzas Armadas"
+set_label(lapop_country_2004to2018$b20 )<- "Confianza en Iglesia Católica"
+set_label(lapop_country_2004to2018$b20a)<- "Confianza en Iglesias Evangélicas/Protestantes"
+set_label(lapop_country_2004to2018$b21 )<- "Confianza en Partidos Políticos"
+set_label(lapop_country_2004to2018$b21a)<- "Confianza en Ejecutivo"
+set_label(lapop_country_2004to2018$n9  )<- "Evaluación del Desempeño del Gobierno Combatiendo Corrupción"
+set_label(lapop_country_2004to2018$n11 )<- "Evaluación del Desempeño del Gobierno en Seguridad Ciudadana"
+set_label(lapop_country_2004to2018$n15 )<- "Evaluación del Desempeño del Gobierno Manejando Economía"
+set_label(lapop_country_2004to2018$pr4 )<- "Respeto por la Propiedad Privada"
+set_label(lapop_country_2004to2018$ros4)<- "Gobierno debe Implementar Políticas para Reducir Desigualdadad de Ingresos"
+set_label(lapop_country_2004to2018$ing4)<- "Democracia es Mejor que otras Formas de Gobierno"
+set_label(lapop_country_2004to2018$eff1)<- "Gobernantes están Interesados en lo que la Gente Piensa"
+set_label(lapop_country_2004to2018$pn4 )<- "Satisfacción con la Democracia"
+set_label(lapop_country_2004to2018$exc7)<- "Percepción de Corrupción Pública"
+set_label(lapop_country_2004to2018$pol1)<- "Interés en Política"
+set_label(lapop_country_2004to2018$vb2 )<- "Voto en Últimas Elecciones Presidenciales (% Sí votó)"
+
+#---------------------------------------------------------------------------------------------------#
+set_label(lapop_country_2004to2018$it1_promr )<- "Confianza Interpersonal (promedio ola)"
+set_label(lapop_country_2004to2018$prot3_promr)<- "Participar en Protesta (promedio ola)"
+set_label(lapop_country_2004to2018$aoj12_promr)<- "Confianza en Eficacia Sistema Judicial (promedio ola)"
+set_label(lapop_country_2004to2018$b2_promr)<- "Respeto por las Instituciones (promedio ola)"
+set_label(lapop_country_2004to2018$b3_promr)<- "Grado de Acuerdo: Derechos Básicos Están Protegidos por el Sistema Político (promedio ola)"
+set_label(lapop_country_2004to2018$b4_promr)<- "Orgullo con el Sistema Político (promedio ola)"
+set_label(lapop_country_2004to2018$b10a_promr)<- "Confianza en Sistema Judicial (promedio ola)"
+set_label(lapop_country_2004to2018$b12_promr)<- "Confianza en Fuerzas Armadas (promedio ola)"
+set_label(lapop_country_2004to2018$b20_promr)<- "Confianza en Iglesia Católica (promedio ola)"
+set_label(lapop_country_2004to2018$b20a_promr)<- "Confianza en Iglesias Evangélicas/Protestantes (promedio ola)"
+set_label(lapop_country_2004to2018$b21_promr )<- "Confianza en Partidos Políticos (promedio ola)"
+set_label(lapop_country_2004to2018$b21a_promr)<- "Confianza en Ejecutivo (promedio ola)"
+set_label(lapop_country_2004to2018$n9_promr)<- "Evaluación del Desempeño del Gobierno Combatiendo Corrupción (promedio ola)"
+set_label(lapop_country_2004to2018$n11_promr )<- "Evaluación del Desempeño del Gobierno en Seguridad Ciudadana (promedio ola)"
+set_label(lapop_country_2004to2018$n15_promr )<- "Evaluación del Desempeño del Gobierno Manejando Economía"
+set_label(lapop_country_2004to2018$pr4_promr )<- "Respeto por la Propiedad Privada (promedio ola)"
+set_label(lapop_country_2004to2018$ros4_promr)<- "Gobierno debe Implementar Políticas para Reducir Desigualdadad de Ingresos (promedio ola)"
+set_label(lapop_country_2004to2018$ing4_promr)<- "Democracia es Mejor que otras Formas de Gobierno (promedio ola)"
+set_label(lapop_country_2004to2018$eff1_promr)<- "Gobernantes están Interesados en lo que la Gente Piensa"
+set_label(lapop_country_2004to2018$pn4_promr )<- "Satisfacción con la Democracia (promedio ola)"
+set_label(lapop_country_2004to2018$exc7_promr)<- "Percepción de Corrupción Pública (promedio ola)"
+set_label(lapop_country_2004to2018$pol1_promr)<- "Interés en Política (promedio ola)"
+set_label(lapop_country_2004to2018$vb2_promr)<- "Voto en Últimas Elecciones Presidenciales (promedio ola)"
+
+set_label(lapop_country_2004to2018$gini)     <- "Índice de Gini"
+set_label(lapop_country_2004to2018$gini_agg) <- "Índice de Gini (promedio ola)"
+set_label(lapop_country_2004to2018$gdp)      <- "Producto Interno Bruto (en miles de USD)"
+set_label(lapop_country_2004to2018$gdp_agg)  <- "Producto Interno Bruto (promedio ola)"
+```
+
+```{r}
+view_df(lapop_country_2004to2018,show.id = TRUE, show.type = TRUE)
+```
+
+## Base agregada con medida promedio anual en filas
+
+```{r}
+med1<- lapop_country_2004to2018 %>% select(-promedio)
+med1$year <- as.character(med1$year)
+med1$year <- set_label(x = med1$year,label = get_label(lapop_country_2004to2018$year))
+prom_wave <- med1 %>% group_by(wave)%>%summarise_all(funs(mean(., na.rm=TRUE))) 
+prom_wave$year <- "Todos"
+prom_wave$year <- factor(prom_wave$year,ordered = T)
+prom_wave$pais <- "Promedio ola" # 100="Promedio ola"
+prom_wave$pais.name <- "Promedio ola"
+prom_wave$iso3c <- "WAVG"
+prom_wave$idwc <- "2004_2018LA"
+prom_wave<-prom_wave %>%  select(names(med1))
+names(med1)==names(prom_wave)
+
+lapop_long_wave   <- bind_rows(med1, prom_wave) 
+lapop_long_wave <- set_label(lapop_long_wave,get_label(med1))
+
+# Year/wWave --------------------------------------------------------#
+length(table(lapop_long_wave$year))
+table(lapop_long_wave$year)
+lapop_long_wave$year <- factor(lapop_long_wave$year,ordered = TRUE)
+class(lapop_long_wave$year)
+
+length(table(lapop_long_wave$wave))
+table(lapop_long_wave$wave)
+lapop_long_wave$wave <- factor(lapop_long_wave$wave,ordered = TRUE)
+class(lapop_long_wave$wave)
+```
+
+```{r}
+view_df(lapop_long_wave,show.id = TRUE, show.type = TRUE,show.prc = T)
+```
+
+# Guardar base de datos
+
+```{r}
+save(lapop_ind_2004to2018,    file ="input/data/proc/lapop_ind_2004to2018.RData")
+save(lapop_country_2004to2018,file ="input/data/proc/lapop_count_2004to2018.RData")
+save(lapop_long_wave,         file ="input/data/proc/lapop_count_2004to2018_long-wave.RData")
+```
