--- a/app/instrucciones.Rmd
+++ b/app/instrucciones.Rmd
@@ -30,5 +30,5 @@ knitr::include_graphics("www/images/ocs-logo.png")
   b.  Seleccione el País
   c.  Seleccione la Ola o rango de tiempo: Cada una de las Olas representa el periodo en que se realizó el trabajo de campo.
   d.  Presione el botón ![](www/images/graficar.png){width="12%"}
-  e.  Si seas generar un nuevo gráfico, repite los pasos anteriores.
+  e.  Si desea generar un nuevo gráfico, repite los pasos anteriores.
   f.  Para **guardar** el resultado puedes hacer **click derecho** sobre el gráfico y seleccionar  _"Guardar imagen como"_.
